# drag

./: .env.development  .env.development-remote  .env.production  .env.staging  .gitignore  .prettierignore  Dockerfile  README.md  capacitor.config.ts  cypress.config.ts  docker-compose.yml  error.vue  eslint.config.js  nuxt.config.ts  package-lock.json  package.json  release-please-config.json  tailwind.config.ts  tsconfig.app.json  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: build_deploy_cluster_production.yaml  tests_build_deploy_cluster_staging.yaml  tests_deploy-release.yml
.husky/: commit-msg
android/app/: build.gradle
android/app/src/main/java/com/flapi/myapp/: MainActivity.java
android/app/src/main/res/values/: strings.xml
assets/: README.md
docker/: nginx.conf
docker/production/: Dockerfile
docker/staging/: Dockerfile
ios/App/App.xcodeproj/: project.pbxproj
k8s/production/: certificate.yaml  deployment.yaml  docker-registry-secret.yaml  hpa.yaml  ingress.yaml  namespace.yaml  service.yaml
k8s/staging/: certificate.yaml  deployment.yaml  docker-registry-secret.yaml  hpa.yaml  ingress.yaml  namespace.yaml  service.yaml
public/: _robots.txt
src-nuxt/components/: exemple-component.vue
src-nuxt/pages/: index.vue
src-tauri/: Cargo.toml  tauri.conf.json  updater.json
src-tauri/scripts/: beforeBuildCommand.sh  beforeDevCommand.sh
src-tauri/src/: main.rs
tests/e2e/: exemple.cy.ts
tests/unit/: exemple.nuxt.spec.ts
