[package]
name = "flapi-starterkit-frontend"
version = "0.0.0"
description = "Flapi StarterKit FrontEnd"
authors = ["corentin recanzone"]
edition = "2021"
rust-version = "1.81.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = ["macos-private-api"] }
tauri-plugin-shell = "2.0.2"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.133"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2.1.0"

# Server development
[profile.dev]
panic = "abort" # Éliminer la logique de nettoyage de panique coûteuse
opt-level = 0   # Moins d'optimisation pour un temps de compilation plus rapide et moins d'utilisation de mémoire

# Optimize build for Release
[profile.release]
panic = "abort"   # Éliminer la logique de nettoyage de panique coûteuse
codegen-units = 1 # Compiler les crates l'une après l'autre pour que le compilateur puisse optimiser mieux
lto = true        # Active les optimisations de link
opt-level = "s"   # Optimiser la taille du binaire
strip = true      # Supprimer automatiquement les symboles du binaire.
